<resources>
    <string name="app_name">Work NoteBook</string>
    <string name="Authorization">Authorization</string>
    <string name="Registration">Registration</string>
    <string name="AddLogin">Add login</string>
    <string name="AddNewLogin">Add new login</string>
    <string name="AddOldPassword">Add old password</string>
    <string name="AddNewPassword">Add new password</string>
    <string name="InvalidPassword">Invalid password</string>
    <string name="ChangedPassword">The new password must be different from the old</string>
    <string name="AddValue">Add value</string>
    <string name="AddNewValue">Add new value</string>
    <string name="AddLoginOrEmail">Add login or email</string>
    <string name="AddEmail">Add email</string>
    <string name="AddPass">Add password</string>
    <string name="NotValidLoginOrPassword">Invalid login or password</string>
    <string name="Login">Login</string>
    <string name="or">or</string>
    <string name="OnRegistration">Registration</string>
    <string name="AddName">Add name</string>
    <string name="IncorrectEmail">Incorrect Email</string>
    <string name="NotRegistrationUserExisting">A user with this login or email is already registered</string>
    <string name="RegistrationSuccessful">Registration is successful</string>
    <string name="RegistrationError">Registration error</string>
    <string name="SaveError">Save error</string>
    <string name="Error">Error</string>
    <string name="errorNodeEmptySave">To save, fill in any of the fields</string>
    <string name="errorSaveNoChanged">There are no changes to save</string>
    <string name="errorMeetingEndMoreStart">The end of the event must be later than the beginning</string>
    <string name="LoginSuccessful">Login is successful</string>
    <string name="LoginLocal">Login local</string>
    <string name="LoginUserNotFound">Invalid username or password</string>
    <string name="LoginErrorQuestion">Authorization error. Log in locally to work without internet access?</string>
    <string name="LoginErrorLocalQuestion">Server connection error. Log in locally to work without internet access?</string>
    <string name="LoginLocalSuccessful">Only local authorization is available. Successful login.</string>
    <string name="edit_profile">Edit profile</string>
    <string name="user_id">User ID</string>
    <string name="user_login">Login</string>
    <string name="user_email">Email</string>
    <string name="user_pass">Password</string>
    <string name="user_is_verified">Verified</string>
    <string name="user_is_admin">Admin</string>
    <string name="user_name">Name</string>
    <string name="user_birthdate">Date of birth</string>
    <string name="AddUserBirthdate">Select the date of birth</string>
    <string name="AddNewUserBirthdate">Select the new date of birth</string>
    <string name="AddDate">Select a date</string>
    <string name="GoToDate">Go to date</string>
    <string name="StartDate">Start date</string>
    <string name="EndDate">End date</string>
    <string name="AddTime">Select a time</string>
    <string name="StartTime">Start time</string>
    <string name="EndTime">End time</string>
    <string name="NoMeetings">There are no scheduled events</string>
    <string name="user_gender">Gender</string>
    <string name="MeetingNotes">Meeting notes</string>
    <string name="syncMeetingsImmediatelyHint">Synchronize meetings immediately when creating or editing</string>
    <string name="syncNotesImmediatelyHint">Synchronize notes immediately when creating or editing</string>
    <string name="groupByPriorityDescendingOrder">Sort by priority, descending order</string>
    <string name="groupByPriorityAscendingOrder">Sort by priority, ascending order</string>
    <string name="groupByMeetingAtDescendingOrder">Sort by meeting date, descending order</string>
    <string name="groupByMeetingAtAscendingOrder">Sort by meeting date, ascending order</string>
    <string name="groupByUpdatedAtDescendingOrder">Sort by changed date, descending order</string>
    <string name="groupByUpdatedAtAscendingOrder">Sort by changed date, ascending order</string>
    <string name="FilterByPriorityHigh">Priority filter, only high</string>
    <string name="FilterByPriorityNormal">Priority filter, only normal</string>
    <string name="FilterByPriorityLow">Priority filter, only low</string>
    <string name="groupByActiveDescendingOrder">Sort by activity, descending order</string>
    <string name="groupByActiveAscendingOrder">Sort by activity, in ascending order</string>
    <string name="FilterViewOnlyActive">Filter, show only active</string>
    <string name="FilterViewOnlyNotActive">Filter, show only inactive</string>
    <string name="groupBySyncDescendingOrder">Sort by cloud storage, descending order</string>
    <string name="groupBySyncAscendingOrder">Sort by cloud storage, ascending order</string>
    <string name="FilterViewOnlySyncByBack">Filter, show only synchronized</string>
    <string name="FilterViewOnlyNotSyncByBack">Filter, show only non-synchronized</string>
    <string name="Search">Search</string>
    <string name="ArchiveRecord">Archive record</string>
    <string name="SearchMustContain">Must contain</string>
    <string name="user_account_created">Account creation date</string>
    <string name="SuccessfulSaving">Successful saving</string>
    <string name="Apply">Apply</string>
    <string name="UserSettings">User settings</string>
    <string name="logout">Logout</string>
    <string name="save_changes">Save changes</string>
    <string name="changes_saved">The changes are saved</string>
    <string name="UserNotes">User notes</string>
    <string name="UserMeetings">User meetings</string>
    <string name="goToBack">Back</string>
    <string name="Notes">Notes</string>
    <string name="Meetings">Meetings</string>
    <string name="goToNext">Next</string>
    <string name="CreateNote">Create note</string>
    <string name="CreateMeeting">Create meeting</string>
    <string name="ListIsEmpty">The list is empty</string>
    <string name="Profile">Profile</string>
    <string name="UserData">User data</string>
    <string name="Settings">Settings</string>
    <string name="checking_connection">"Checking the connection to the server… "</string>
    <string name="connection_error">Failed to connect to the server. Check your internet connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="note_title">Note title</string>
    <string name="meeting_title">Meeting title</string>
    <string name="meeting_location">Meeting location</string>
    <string name="note_content">Note content</string>
    <string name="meeting_description">Meeting description</string>
    <string name="enter_note_title">Enter note title…</string>
    <string name="enter_meeting_title">Enter meeting title…</string>
    <string name="enter_meeting_location">Enter meeting location…</string>
    <string name="enter_note_content">Enter note content…</string>
    <string name="enter_meeting_description">Enter meeting description…</string>
    <string name="Sync">Synchronize</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="recover">Recover</string>
    <string name="userIsNotLogged">User is not logged in</string>
    <string name="rowCreatedInfo">Created:</string>
    <string name="edit">Edit</string>
    <string name="menu">Menu</string>
    <string name="filters">Filters</string>
    <string name="checkConnect">Check the connection to the server</string>
    <string name="syncUserData">Synchronize data</string>
    <string name="syncNotes">Synchronize notes</string>
    <string name="syncMeetings">Synchronize data</string>
    <string name="high_priority">Tall</string>
    <string name="normal_priority">Normal</string>
    <string name="low_priority">Low</string>
    <string name="set_priority">"Set priority "</string>
    <string name="gender_not_selected">Not selected</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="Archive">Archive</string>
    <string name="DeletePermanently">Delete it permanently</string>
    <string name="cancel">Cancel</string>
    <string name="Cancel">Cancel</string>
    <string name="select_priority">Choose priority</string>
    <string name="errorConnectRegistrationCheck">The server is unavailable. Log in to your account to continue working without server access.</string>
    <string name="FakePassword">****************</string>
</resources>