<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/auth_page_container"
    android:fillViewport="true"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/auth_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/lightLightGray"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/textColor"
            android:text="@string/Authorization"
            android:textSize="37sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ett_auth_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:background="@color/lightLightGrayBack"
            android:textSize="20sp"
            android:padding="7dp"
            android:textColorHint="@color/textLight"
            android:hint="@string/AddLoginOrEmail"/>

        <EditText
            android:id="@+id/ett_auth_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:background="@color/lightLightGrayBack"
            android:textSize="20sp"
            android:padding="7dp"
            android:textColorHint="@color/textLight"
            android:hint="@string/AddPass" />

        <Button
            android:id="@+id/btn_auth"
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/Login" />

        <LinearLayout
            android:id="@+id/go_to_registration_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/go_to_registration_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:textColor="@color/textLight"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/or"/>

            <TextView
                android:id="@+id/go_to_registration"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:gravity="center"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:text="@string/OnRegistration"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/link_color"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textSize="18sp"/>

            <ProgressBar
                android:id="@+id/auth_page_progress_bar"
                android:gravity="center"
                android:visibility="gone"
                android:layout_width="68dp"
                android:layout_height="68dp" />

            <TextView
                android:id="@+id/auth_page_error_check_connect_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"
                android:textColor="@color/textLight"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:textSize="18sp"
                android:gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/errorConnectRegistrationCheck"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/btn_auth_page_check_connection_refresh"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/retry"
            android:src="@drawable/ic_refresh_big"/>

    </LinearLayout>

</ScrollView>
