<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/registration_page_container"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/registration_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:background="@color/lightLightGray"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_bold"
            android:textColor="@color/textColor"
            android:text="@string/Registration"
            android:textSize="37sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/ett_registration_name"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:background="@color/lightLightGrayBack"
            android:textSize="20sp"
            android:padding="7dp"
            android:textColorHint="@color/textLight"
            android:hint="@string/AddName"/>

        <EditText
            android:id="@+id/ett_registration_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="text"
            android:textColor="@color/textColor"
            android:background="@color/lightLightGrayBack"
            android:textSize="20sp"
            android:padding="7dp"
            android:textColorHint="@color/textLight"
            android:hint="@string/AddLogin"/>

        <EditText
            android:id="@+id/ett_registration_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="35dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor"
            android:background="@color/lightLightGrayBack"
            android:textSize="20sp"
            android:padding="7dp"
            android:textColorHint="@color/textLight"
            android:hint="@string/AddEmail"/>

        <EditText
            android:id="@+id/ett_registration_pass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/inter"
            android:inputType="textPassword"
            android:textColor="@color/textColor"
            android:background="@color/lightLightGrayBack"
            android:textSize="20sp"
            android:padding="7dp"
            android:textColorHint="@color/textLight"
            android:hint="@string/AddPass" />

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="300dp"
            android:layout_height="57dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/OnRegistration" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/tv_registration_go_to_auth_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:textColor="@color/textLight"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:text="@string/or"/>

            <TextView
                android:id="@+id/go_to_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:textStyle="bold"
                android:text="@string/Login"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/link_color"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:textSize="18sp"/>

            <ProgressBar
                android:id="@+id/registration_page_progress_bar"
                android:gravity="center"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
