<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp"
    app:shapeAppearanceOverlay="@style/RoundedCardShape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_text_disabled"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/AddPass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarNegativeButtonStyle"
                android:text="@string/Cancel"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

            <Button
                android:id="@+id/btnOk"
                android:text="@string/Authorization"
                android:layout_marginStart="12dp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
